fixed z-index not working issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,7 @@
 }
 
 .logo {
-  z-index: 2;
+  z-index: 1;
 }
 /* Header Block */
 .header {
@@ -22,7 +22,6 @@
   display: flex;
   align-items: center;
   overflow: hidden;
-  z-index: -2;
 }
 
 .logo_place_header {
@@ -39,7 +38,6 @@
   position: absolute;
   right: 0;
   top: 64px;
-  z-index: -1;
 }
 .header__title {
   width: 730px;
@@ -47,6 +45,7 @@
   font-size: 102px;
   font-weight: bold;
   margin-left: 64px;
+  z-index: 1;
 }
 
 .header__subtitle {
@@ -57,6 +56,7 @@
   position: absolute;
   left: 64px;
   bottom: 30px;
+  z-index: 1;
 
 }
 .header__subtitle-text {
@@ -66,7 +66,6 @@
   text-decoration: none;
   color: #2f80ed;
 }
-
 
 .header__main-illustration {
   width: 756px;
@@ -105,7 +104,6 @@
 }
 
 .two-columns__paragraph {
-  /* align-content: space-between; */
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
@@ -152,8 +150,6 @@
 
 .table__cell {
   width: 250px;
-  /* grid-row-gap: 20px; */
-  /* margin-bottom: 60px; */
 }
 .table__heading {
   margin: 0;
@@ -174,10 +170,8 @@
 .feynman {
   background-color: #f2f2f2;
   padding-top: 100px;
-  position: relative;
   height: 790px;
-  z-index: -2;
-  /* display: flex; */
+  position: relative;
 }
 
 .feynman__title {
@@ -187,6 +181,8 @@
   line-height: 1.15;
   font-size: 120px;
   font-weight: bold;
+  position: relative;
+  z-index: 1;
 }
 
 .feynman__subtitle {
@@ -195,6 +191,8 @@
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
+  position: relative;
+  z-index: 1;
 }
 
 .feynman__link {
@@ -206,15 +204,15 @@
   position: absolute;
   right: 48px;
   top: 50%;
+  z-index: 1;
 }
 
 .feynman__image {
   width: 867px;
   height: 637px;
   position: absolute;
-  bottom: 0;
   left: 0;
-  z-index: -1;
+  bottom: 0;
 }
 
 /* Section kaufman */
